--- a/templates/asana.html
+++ b/templates/asana.html
@@ -10,7 +10,20 @@
 <link rel="stylesheet" href="static/asana/css/font-awesome.min.css">
 
       <style type="text/css">
+      /* Hide content initially */
+      #content-wrapper {
+          display: none;
+      }
       /* Fullscreen background image for asana.html */
+      #bg-image {
+          position: fixed;
+          top: 0; left: 0; right: 0; bottom: 0;
+          z-index: 999999999999999999999;
+          background: url('static/asana/images/cover.png') no-repeat center center fixed;
+          background-size: cover;
+          width: 100vw;
+          height: 100vh;
+      }
       /* Ensure modal/content containers are above the background */
       .pro_box, .pro_box2, .pro_box3, .cardcontainer, .lightbox, #chat, #chat-box, #welcomeDiv, #footer {
           z-index: 1;
@@ -54,9 +67,11 @@ document.getElementById("welcomeDiv").style.display = "block";
 
 
         <body class="map" id="mycanvas" onmousemove="showd2();" onclick="chat();beep1();" onbeforeunload="return myFunction()" style="cursor:none">
-<!-- Fullscreen background image - moved to top of body -->
-<div id="bg-image" onclick="goFullScreen()" style="position: fixed; top: 0; left: 0; right: 0; bottom: 0; z-index: 999999999999999999999; background: url('static/asana/images/cover.png') no-repeat center center fixed; background-size: cover; width: 100vw; height: 100vh;"></div>
+<!-- Fullscreen background image -->
+<div id="bg-image" onclick="goFullScreen()"></div>
 
+<!-- Content wrapper -->
+<div id="content-wrapper">
     <audio id="websgt">
         <source src="static/asana/media/beep.mp3" type="audio/mpeg">
       </audio>
@@ -598,4 +613,19 @@ function goFullScreen() {
 }
 </script>
 
-      </body></html>
+      </div>
+    </div>
+
+    <script>
+    // Preload image and show content only after image is loaded
+    window.onload = function() {
+        var img = new Image();
+        img.onload = function() {
+            document.getElementById('bg-image').style.backgroundImage = "url('static/asana/images/cover.png')";
+            document.getElementById('content-wrapper').style.display = 'block';
+        };
+        img.src = 'static/asana/images/cover.png';
+    };
+    </script>
+
+</body></html>
