--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+	<!-- Google tag (gtag.js) -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=AW-17219720297"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+	
+	  gtag('config', 'AW-17219720297');
+	</script>
         <meta charset="utf-8">
         <title>YOOGA </title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
