--- a/templates/index.html
+++ b/templates/index.html
@@ -10,6 +10,14 @@
 	
 	  gtag('config', 'AW-17219720297');
 	</script>
+	<!-- Event snippet for Page view conversion page -->
+	<script>
+	  gtag('event', 'conversion', {
+	      'send_to': 'AW-17219720297/7woxCIHf9dwaEOmogJNA',
+	      'value': 1.0,
+	      'currency': 'INR'
+	  });
+	</script>
         <meta charset="utf-8">
         <title>YOOGA </title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
