--- a/templates/index.html
+++ b/templates/index.html
@@ -2,13 +2,14 @@
 <html lang="en">
     <head>
 	<!-- Google tag (gtag.js) -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=AW-17219720297"></script>
+	<script async src="https://www.googletagmanager.com/gtag/js?id=AW-17051846023">
+	</script>
 	<script>
 	  window.dataLayer = window.dataLayer || [];
 	  function gtag(){dataLayer.push(arguments);}
 	  gtag('js', new Date());
 	
-	  gtag('config', 'AW-17219720297');
+	  gtag('config', 'AW-17051846023');
 	</script>
 	<!-- Event snippet for Page view conversion page -->
 	<script>
