--- a/templates/asana.html
+++ b/templates/asana.html
@@ -627,5 +627,14 @@ function goFullScreen() {
         img.src = 'static/asana/images/cover.png';
     };
     </script>
+    <script type="text/javascript">
+      window._mfq = window._mfq || [];
+      (function() {
+        var mf = document.createElement("script");
+        mf.type = "text/javascript"; mf.defer = true;
+        mf.src = "//cdn.mouseflow.com/projects/625abe03-a51d-4bf8-bdd5-fad6e1499d2f.js";
+        document.getElementsByTagName("head")[0].appendChild(mf);
+      })();
+    </script>
 
 </body></html>
